<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_title"
        android:fontFamily="@font/inter_w800"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bmi_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/bmi_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        app:srcCompat="@drawable/bmi_logo" />

    <TextView
        android:id="@+id/tv_main_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/inter_w700"
        android:text="@string/text_main_message"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@id/iv_bmi_logo"
        app:layout_constraintStart_toStartOf="@id/iv_bmi_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_bmi_logo" />

    <TextView
        android:id="@+id/tv_secondary_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_secondary_message"
        android:textColor="@color/lightPrimaryColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_main_message"
        app:layout_constraintStart_toStartOf="@id/tv_main_message"
        app:layout_constraintTop_toBottomOf="@id/tv_main_message" />

    <Button
        android:id="@+id/btn_get_started"
        style="@style/RoundedButtonStyleLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/light_button_style"
        android:text="@string/button_get_started"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/tv_secondary_message"
        app:layout_constraintStart_toStartOf="@id/tv_secondary_message"
        app:layout_constraintTop_toBottomOf="@id/tv_secondary_message" />

</androidx.constraintlayout.widget.ConstraintLayout>
