<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:background="@color/lightBackgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp">

            <!-- Height Value -->
            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_results_text"
                android:fontFamily="@font/inter_w400"
                android:textSize="32sp"
                android:layout_marginTop="36dp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlueColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_integer_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="28"
                    android:fontFamily="@font/inter_w700"
                    android:textSize="140sp"
                    android:textColor="@color/primaryColor" />

                <TextView
                    android:id="@+id/tv_decimal_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."
                    android:fontFamily="@font/inter_w500"
                    android:textSize="52sp"
                    android:textColor="@color/primaryColor"
                    android:layout_gravity="bottom" />

                <TextView
                    android:id="@+id/tv_fractional_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="54"
                    android:fontFamily="@font/inter_w500"
                    android:textSize="52sp"
                    android:textColor="@color/primaryColor"
                    android:layout_gravity="bottom" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_normal_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_bmi_text"
                android:fontFamily="@font/inter_w500"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlueColor" />

            <TextView
                android:id="@+id/tv_underweight"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underweight_bmi"
                android:fontFamily="@font/inter_w400"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlueColor" />
            <TextView
                android:id="@+id/tv_normal_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_weight_bmi"
                android:fontFamily="@font/inter_w400"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlueColor" />
            <TextView
                android:id="@+id/tv_overweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overweight_bmi"
                android:fontFamily="@font/inter_w400"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlueColor" />
            <TextView
                android:id="@+id/tv_obesity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obesity_bmi"
                android:fontFamily="@font/inter_w400"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlueColor" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
