<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:background="@color/lightBackgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp">

            <!-- Gender Selection Title -->
            <TextView
                android:id="@+id/tv_gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_title"
                android:fontFamily="@font/inter_w400"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlueColor" />

            <!-- Switch Section -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <!-- Min Value (Male) -->
                <TextView
                    android:id="@+id/tv_min_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_w400"
                    android:text="@string/male"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- SwitchCompat Button -->
                <Switch
                    android:id="@+id/gender_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:checked="true"
                    android:thumb="@drawable/thumb_bg"
                    android:track="@drawable/thumb_track"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />


                <!-- Max Value (Female) -->
                <TextView
                    android:id="@+id/tv_max_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_w400"
                    android:text="@string/female"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
